src/test/deca/context/invalid/print-boolean.des
type of argument must be either int, float or String